--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph_accelerometr"
         android:layout_width="match_parent"
+        android:padding="20dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@android:color/darker_gray" />
