--- a/app/src/main/res/layout/activity_acceler_gyros.xml
+++ b/app/src/main/res/layout/activity_acceler_gyros.xml
@@ -28,10 +28,17 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="45dp">
+        android:layout_height="45dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv"
 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
         <SeekBar
             android:id="@+id/seekBar_both"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:progress="5"
