--- a/app/src/main/res/layout/activity_acceler_gyros.xml
+++ b/app/src/main/res/layout/activity_acceler_gyros.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="bottom|end"
     android:orientation="vertical"
     tools:context="com.arkadygamza.shakedetector.MainActivity">
 
@@ -15,14 +16,14 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph_accelerometr_both"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="124dp"
         android:layout_weight="1"
         android:background="@android:color/darker_gray" />
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph_gyroscope_both"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="124dp"
         android:layout_weight="1"
         android:background="@android:color/darker_gray" />
 
@@ -30,90 +31,101 @@
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tv"
 
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
+
         <SeekBar
             android:id="@+id/seekBar_both"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:progress="5"
-            android:max="20" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="27dp"
+            android:max="20"
+            android:progress="5" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="45dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="0dp"
+            android:text="Start"
+            android:textSize="8sp" />
+
+        <Button
+            android:id="@+id/stop"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="178dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="0dp"
+            android:text="Stop"
+            android:textSize="8sp" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="283dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="0dp"
+            android:text="Send"
+            android:textSize="8sp" />
+
+        <EditText
+            android:id="@+id/editK"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="0dp"
+            android:ems="10"
+            android:hint="k"
+            android:inputType="number|numberDecimal"
+            tools:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/editAlpha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/editK"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="7dp"
+            android:ems="10"
+            android:hint="alpha"
+            android:inputType="number|numberDecimal" />
 
 
     </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/coordinats_acceler"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Linear Stats:"/>
-
-            <TextView
-                android:id="@+id/coordinats_acceler_x"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:text="X:"/>
-
-            <TextView
-                android:id="@+id/coordinats_acceler_y"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:text="Y:"/>
-            <TextView
-                android:id="@+id/coordinats_acceler_z"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:text="Z:"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/coordinats_gyros"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="Geroscope Stats:"/>
-
-            <TextView
-                android:id="@+id/coordinats_gyros_x"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:text="X:"/>
-
-            <TextView
-                android:id="@+id/coordinats_gyros_y"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:text="Y:"/>
-            <TextView
-                android:id="@+id/coordinats_gyros_z"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:text="Z:"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -123,7 +135,8 @@
             android:id="@+id/value_edit"
             android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:inputType="numberDecimal" />
 
         <Button
