--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorFirst">#1a237e</color>
+    <color name="colorTwo">#283593</color>
+    <color name="colorTree">#3f51b5</color>
+    <color name="colorText">#f5f5f5</color>
+    <color name="colorBlue">#3f51b5</color>
+    <color name="colorBackground">#b0bec5</color>
+    <color name="colorButton">#7986cb</color>
+    <color name="colorFirstButton">#512da8</color>
+    <color name="red">#c62828</color>
+    <color name="s">#78909c</color>
+    <color name="v">#90caf9</color>
+    <color name="a">#1e88e5</color>
 </resources>
