--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,4 +12,8 @@
         android:id="@+id/line_accelerometr_geroscope"
         android:orderInCategory="3"
         android:title="acceler and geros" />
+    <item
+        android:id="@+id/main"
+        android:orderInCategory="4"
+        android:title="Главная" />
 </menu>
