Add menu StartActivity

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,15 +3,15 @@
     <item
         android:id="@+id/line_gyroscope"
         android:orderInCategory="1"
-        android:title="Gyroscope" />
+        android:title="Гироскоп" />
     <item
         android:id="@+id/line_accelerometr"
         android:orderInCategory="2"
-        android:title="accelerometr" />
+        android:title="Акселерометр" />
     <item
         android:id="@+id/line_accelerometr_geroscope"
         android:orderInCategory="3"
-        android:title="acceler and geros" />
+        android:title="Акселерометр и гироскоп" />
     <item
         android:id="@+id/main"
         android:orderInCategory="4"
@@ -20,4 +20,10 @@
         android:id="@+id/record"
         android:orderInCategory="4"
         android:title="Запись" />
+    <item
+        android:id="@+id/movement"
+        android:orderInCategory="4"
+        android:title="Перемещение" />
+
+
 </menu>
