--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -12,21 +12,26 @@
     tools:context="io.iam360.sensorlog.MainActivity">
 
     <Button
+        android:id="@+id/buttonStart"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonStart"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="64dp"
         android:enabled="true"
-        android:text="Start" />
+        android:background="@color/a"
+        android:text="Начать запись" />
 
     <Button
         android:id="@+id/buttonStop"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonStart"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="178dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="128dp"
         android:enabled="false"
-        android:text="Stop" />
+        android:text="Стоп"
+        android:background="@color/a"/>
 
     <Button
         android:id="@+id/buttonShare"
@@ -36,7 +41,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"
         android:enabled="true"
-        android:text="Share" />
+        android:background="@color/a"
+        android:text="Отправить" />
 
     <EditText
         android:id="@+id/editK"
@@ -51,7 +57,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
-        android:hint="k"
+        android:hint="Введите K"
         android:inputType="number|numberDecimal" />
 
     <EditText
@@ -67,7 +73,36 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="7dp"
         android:ems="10"
-        android:hint="alpha"
+        android:hint="Введите alpha"
         android:inputType="number|numberDecimal" />
+
+    <EditText
+        android:id="@+id/editShag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editK"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="60dp"
+        android:ems="10"
+        android:hint="Введите шаг дискретизации"
+        android:inputType="number|numberDecimal" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:text="Параметры системы"
+        android:textColor="@color/red"
+        android:textSize="20sp"
+        tools:textColor="colors/red" />
 
 </RelativeLayout>
