--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.arkadygamza.shakedetector.MainActivity">
-
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
@@ -15,10 +14,10 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph_accelerometr"
         android:layout_width="match_parent"
-        android:padding="20dp"
-        android:layout_height="0dp"
+        android:layout_height="291dp"
         android:layout_weight="1"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/darker_gray"
+        android:padding="20dp" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -41,13 +40,13 @@
 
         <Button
             android:id="@+id/shag"
-            android:layout_width="120dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="0dp"
             android:onClick="onClick"
-            android:text="Применить" />
+            android:text="ОК" />
 
     </RelativeLayout>
 
@@ -101,6 +100,11 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/btn_all"
             android:text="cancel" />
+
+        <EditText
+            android:id="@+id/shag_des"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
 
     </RelativeLayout>
